--- a/views/components/post.editor.ejs
+++ b/views/components/post.editor.ejs
@@ -73,13 +73,17 @@
       const image_urls = Array.from(images).map(image => image.src)
       // 判断文本
       const form_data = new FormData(form_el)
-      if (form_data.get('text').toString().length < content_min_length) {
+      const text = document.querySelector('.jodit-editor #text').value;
+      if (text.length < content_min_length) {
         return jodit.message.message(`<%= i18n('post.form.content_too_short', {min: locals.content_min_length ?? 10 }) %>`, 'error', error_message_duration);
       }
-      if (form_data.get('text').toString().length > content_max_length) {
+      if (text.length > content_max_length) {
         return jodit.message.message(`<%= i18n('post.form.content_too_long', {min: locals.content_min_length ?? 10 }) %>`, 'error', error_message_duration);
 
+
       }
+
+      console.log(Array.from(form_data.keys()))
 
       // 判断标签
       const tags = form_data.get('tags').toString().split(' ').filter(tag => tag.trim())
@@ -99,10 +103,11 @@
 
       // 判断文本
       const form_data = new FormData(form_el)
-      if (form_data.get('text').toString().length < content_min_length) {
+      const text = document.querySelector('.jodit-editor #text').value;
+      if (text.length < content_min_length) {
         return jodit.message.message(`<%= i18n('post.form.content_too_short', {min: locals.content_min_length ?? 10 }) %>`, 'error', error_message_duration);
       }
-      if (form_data.get('text').toString().length > content_max_length) {
+      if (text.length > content_max_length) {
         return jodit.message.message(`<%= i18n('post.form.content_too_long', {min: locals.content_min_length ?? 10 }) %>`, 'error', error_message_duration);
 
       }
