添加邮箱发送属性： rel="noopener"

--- a/views/passport/email.template.ejs
+++ b/views/passport/email.template.ejs
@@ -1,4 +1,4 @@
 <div>
   <p><%=locals.subject%></p>
-  <a href="<%=locals.link%>" target="_blank"><%=locals.link%></a>
+  <a href="<%=locals.link%>" rel="noopener" target="_blank"><%=locals.link%></a>
 </div>
