修复个人中心名字账户显示问题

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -122,7 +122,7 @@ const href_template = `/u/${account.account}?show=${ locals.query.show || 'index
               <% if(account.nickname){ %>
               <div><b><%= account.nickname %></b> (<%= account.account %>)</div>
               <% }else{ %>
-              <div><%= account.nickname %></div>
+              <div><%= account.account %></div>
               <% } %>
               <div><%= account.profile  || '暂无' %></div>
             </div>
