--- a/views/menus.ejs
+++ b/views/menus.ejs
@@ -4,82 +4,180 @@
     top: 0;
     z-index: 999;
   }
+
+  .dropdown-menu[data-bs-popper]{
+    right: 0;
+    left: unset;
+  }
 </style>
 
-<header class="p-lg-2 p-1 mb-3 border-bottom bg-white">
+<header class="p-lg-2 p-1 mb-0 mb-md-3 border-bottom bg-white">
   <div class="container-lg">
-    <div class="d-flex flex-nowrap align-items-center justify-content-center justify-content-lg-start">
+    <!-- 电脑端 -->
+    <div class=" d-md-block d-none">
+      <div class="d-flex flex-nowrap align-items-center justify-content-center justify-content-lg-start">
+        <ul class="flex-fill nav col-12 col-lg-auto me-lg-auto mb-md-0 align-items-center ">
+          <% for(const menu of locals.settings.menus){ %>
 
-      <ul class="flex-fill nav col-12 col-lg-auto me-lg-auto   mb-md-0 align-items-center ">
-        <% for(const menu of locals.settings.menus){ %>
-
-        <% if(menu.type === 'html'){ %>
-        <li><%= menu.html %></li>
-        <% } %>
-
-        <% if(menu.type === 'link'){ %>
-        <li><a href="<%= menu.href %>" class="nav-link px-2 link-secondary"><%= menu.text %></a></li>
-        <% } %>
-
-        <% } %>
-
-        <% if (locals.user?.permissions?.includes('admin')) { %>
-        <li><a href="/admin/index" class="nav-link px-2 link-secondary">Admin</a></li>
-        <% } %>
-
-        <li class="ms-2 me-2">
-          <form action="/post/search" method="post" class="mb-0">
-            <div class="input-group ">
-              <input type="text" name="value" class="form-control form-control-sm" placeholder="搜索帖子..." aria-describedby="button-addon2">
-              <button class="btn btn-sm btn-outline-secondary" type="submit">搜索</button>
-            </div>
-          </form>
-        </li>
-      </ul>
-
-      <div class="flex-auto dropdown text-end">
-        <% if(locals.user){ %>
-
-        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="<%= locals.user.avatar || '/assets/default_avatar.png' %>" alt="<%= locals.user.account %>" width="32" height="32" class="rounded-circle">
-          <span><%= locals.user.account || 'undefined' %></span>
-          <% if(locals.notify_count){ %>
-          <span class="badge text-bg-danger"><%= locals.notify_count %></span>
+          <% if(menu.type === 'html'){ %>
+          <li class="<%= menu.class %>"><%= menu.html %></li>
           <% } %>
-        </a>
 
-        <ul class="dropdown-menu text-small">
-          <li><a class="dropdown-item" href="/u/<%= locals.user.account %>"><%= i18n('_dict_.personal_page') %></a></li>
-          <li><a class="dropdown-item" href="/user/settings"><%= i18n('_dict_.personal_setting') %></a></li>
-          <li>
-            <hr class="dropdown-divider">
+          <% if(menu.type === 'link'){ %>
+          <li class="<%= menu.class %>"><a href="<%= menu.href %>" class="nav-link px-2 link-secondary"><%= menu.text %></a></li>
+          <% } %>
+
+          <% } %>
+
+          <% if (locals.user?.permissions?.includes('admin')) { %>
+          <li class="<%= menu.class %>"><a href="/admin/index" class="nav-link px-2 link-secondary">Admin</a></li>
+          <% } %>
+
+          <li class="ms-2 me-2">
+            <form action="/post/search" method="post" class="mb-0">
+              <div class="input-group ">
+                <input type="text" name="value" class="form-control form-control-sm" placeholder="搜索帖子..." aria-describedby="button-addon2">
+                <button class="btn btn-sm btn-outline-secondary" type="submit">搜索</button>
+              </div>
+            </form>
           </li>
-          <li>
-            <a class="dropdown-item" href="/user/notifies">通知
-              <% if(locals.notify_count){ %>
-              <span class="badge text-bg-danger"><%= locals.notify_count %></span>
-              <% } %>
-            </a>
-          </li>
-          <li><a class="dropdown-item" href="/user/collects">收藏</a></li>
-          <li><a class="dropdown-item" href="/user/drafts"><%= i18n('_dict_.draft') %></a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-          <li><a class="dropdown-item" href="/passport/logout"><%= i18n('_dict_.logout') %></a></li>
         </ul>
-        <% }else{ %>
-        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <span>
-            <%= i18n('_dict_.no_login') %>
-          </span>
-        </a>
-        <ul class="dropdown-menu text-small">
-          <li><a class="dropdown-item" href="/passport/login"><%= i18n('_dict_.login') %></a></li>
-          <li><a class="dropdown-item" href="/passport/register"><%= i18n('_dict_.register') %></a></li>
-        </ul>
-        <% } %>
+
+        <div class="flex-auto dropdown text-end">
+          <% if(locals.user){ %>
+
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="<%= locals.user.avatar || '/assets/default_avatar.png' %>" alt="<%= locals.user.account %>" width="32" height="32" class="rounded-circle">
+            <span><%= locals.user.account || 'undefined' %></span>
+            <% if(locals.notify_count){ %>
+            <span class="badge text-bg-danger"><%= locals.notify_count %></span>
+            <% } %>
+          </a>
+
+          <ul class="dropdown-menu text-small">
+            <li><a class="dropdown-item" href="/u/<%= locals.user.account %>"><%= i18n('_dict_.personal_page') %></a></li>
+            <li><a class="dropdown-item" href="/user/settings"><%= i18n('_dict_.personal_setting') %></a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="/user/notifies">通知
+                <% if(locals.notify_count){ %>
+                <span class="badge text-bg-danger"><%= locals.notify_count %></span>
+                <% } %>
+              </a>
+            </li>
+            <li><a class="dropdown-item" href="/user/collects">收藏</a></li>
+            <li><a class="dropdown-item" href="/user/drafts"><%= i18n('_dict_.draft') %></a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/passport/logout"><%= i18n('_dict_.logout') %></a></li>
+          </ul>
+          <% }else{ %>
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <span>
+              <%= i18n('_dict_.no_login') %>
+            </span>
+          </a>
+          <ul class="dropdown-menu text-small">
+            <li><a class="dropdown-item" href="/passport/login"><%= i18n('_dict_.login') %></a></li>
+            <li><a class="dropdown-item" href="/passport/register"><%= i18n('_dict_.register') %></a></li>
+          </ul>
+          <% } %>
+        </div>
       </div>
+    </div>
+
+
+    <!-- 手机端 -->
+    <div class=" d-md-none d-block">
+      <nav class="navbar ">
+        <div class="container p-0">
+ 
+          <div>
+            <button class="navbar-toggler me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/"><%=locals.settings.name%></a> 
+          </div>
+
+          <% if(locals.user){ %>
+
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="<%= locals.user.avatar || '/assets/default_avatar.png' %>" alt="<%= locals.user.account %>" width="32" height="32" class="rounded-circle">
+            <span><%= locals.user.account || 'undefined' %></span>
+            <% if(locals.notify_count){ %>
+            <span class="badge text-bg-danger"><%= locals.notify_count %></span>
+            <% } %>
+          </a>
+
+          <ul class="dropdown-menu text-small">
+            <li><a class="dropdown-item" href="/u/<%= locals.user.account %>"><%= i18n('_dict_.personal_page') %></a></li>
+            <li><a class="dropdown-item" href="/user/settings"><%= i18n('_dict_.personal_setting') %></a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="/user/notifies">通知
+                <% if(locals.notify_count){ %>
+                <span class="badge text-bg-danger"><%= locals.notify_count %></span>
+                <% } %>
+              </a>
+            </li>
+            <li><a class="dropdown-item" href="/user/collects">收藏</a></li>
+            <li><a class="dropdown-item" href="/user/drafts"><%= i18n('_dict_.draft') %></a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/passport/logout"><%= i18n('_dict_.logout') %></a></li>
+          </ul>
+          <% }else{ %>
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <span>
+              <%= i18n('_dict_.no_login') %>
+            </span>
+          </a>
+          <ul class="dropdown-menu text-small">
+            <li><a class="dropdown-item" href="/passport/login"><%= i18n('_dict_.login') %></a></li>
+            <li><a class="dropdown-item" href="/passport/register"><%= i18n('_dict_.register') %></a></li>
+          </ul>
+          <% } %>
+
+          <div class="offcanvas offcanvas-start " style="width: 300px" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+ 
+            <div class="offcanvas-body">
+
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <% for(const menu of locals.settings.menus){ %>
+
+                <% if(menu.type === 'html'){ %>
+                <li class="nav-item"><%= menu.html %></li>
+                <% } %>
+
+                <% if(menu.type === 'link'){ %>
+                <li class="nav-item"><a href="<%= menu.href %>" class="nav-link px-2 link-secondary"><%= menu.text %></a></li>
+                <% } %>
+
+                <% } %>
+
+                <% if (locals.user?.permissions?.includes('admin')) { %>
+                <li class="nav-item"><a href="/admin/index" class="nav-link px-2 link-secondary">Admin</a></li>
+                <% } %>
+              </ul>
+
+
+
+              <form action="/post/search" method="post" class="mt-3">
+                <div class="input-group ">
+                  <input type="text" name="value" class="form-control form-control-sm" placeholder="搜索帖子..." aria-describedby="button-addon2">
+                  <button class="btn btn-sm btn-outline-secondary" type="submit">搜索</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
     </div>
   </div>
 </header>
