--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,7 @@
 <meta charset="UTF-8">
+<% if(locals.settings?.meta?.icon){ %>
+<link rel="icon" href="<%= locals.settings.meta.icon %>">
+<% } %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="<%=locals.settings.meta.keywords%>">
 <meta name="description" content="<%=locals.settings.meta.description%>">
