修复登录页面的BUG

--- a/views/menus.ejs
+++ b/views/menus.ejs
@@ -30,7 +30,7 @@
           <% } %>
 
           <% if (locals.user?.permissions?.includes('admin')) { %>
-          <li class="<%= menu.class %>"><a href="/admin/index" class="nav-link px-2 link-secondary">Admin</a></li>
+          <li><a href="/admin/index" class="nav-link px-2 link-secondary">Admin</a></li>
           <% } %>
 
           <li class="ms-2 me-2">
